@@ -705,7 +705,32 @@ automatically out of a Bankers account.  Failure to make rent returns the proper
 to sellable status.\n\r\
 \n\r\
 When property is sold, it will be listed as the owner with a slash and the price.  \
-Entering this sort of parameter directly is the quick way to give players or clans property.
+Entering this sort of parameter directly is the quick way to give players or clans property. \n\r\
+\n\r\
+This property is similar to prop_lotforsale, except that the players must buy each room.
+
+PROP_LOTFORSALE=\
+Property   : Prop_LotForSale\n\r\
+Targets    : Room\n\r\
+Parameters : (RENTAL) Price of the first room on the lot\n\r\
+Example    : 1000000\n\r\
+Example    : Bob/100000\n\r\
+Description: \n\r\
+Makes this room and future adjacent rooms available for purchase as  \
+a single lot. This property is an extension of the Prop_RoomForSale property, and \
+includes all of its capabilities, PLUS, when this room is sold, \
+adjacent lots will automatically be created, \
+allowing the player to expand his or her property.  When the property \
+is sold, or falls out of a players possession, the system will \
+automatically retract the created rooms. The word rental followed by a space may \
+preceed the price to make the price of the property be charged every month \
+automatically out of a Bankers account.  Failure to make rent returns the property \
+to sellable status.\n\r\
+\n\r\
+When property is sold, it will be listed as the owner with a slash and the price.  \
+Entering this sort of parameter directly is the quick way to give players or clans property. \n\r\
+\n\r\
+This property is similar to prop_lotsforsale, except that the players don't have to purchase each room.
 
 PROP_ROOMFORSALE=\
 Property   : Prop_RoomForSale\n\r\
